--- a/src/3rdparty/applications/getcal/calsettings.ui
+++ b/src/3rdparty/applications/getcal/calsettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Getcal</class>
- <widget class="QWidget" name="Getcal">
+ <class>CalSettings</class>
+ <widget class="QWidget" name="CalSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -36,10 +36,45 @@
           <x>0</x>
           <y>0</y>
           <width>338</width>
-          <height>345</height>
+          <height>310</height>
          </rect>
         </property>
+        <widget class="QListWidget" name="serverList">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>341</width>
+           <height>351</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="resizeMode">
+          <enum>QListView::Fixed</enum>
+         </property>
+         <property name="gridSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="uniformItemSizes">
+          <bool>false</bool>
+         </property>
+        </widget>
        </widget>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="addServerButton">
+       <property name="text">
+        <string>Add server</string>
+       </property>
       </widget>
      </item>
      <item>
