--- a/src/3rdparty/applications/getcal/getcal.ui
+++ b/src/3rdparty/applications/getcal/getcal.ui
@@ -26,7 +26,7 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="importButton">
        <property name="text">
         <string>Import calendars</string>
        </property>
@@ -46,7 +46,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="clearButton">
        <property name="text">
         <string>Purge all events</string>
        </property>
