--- a/src/3rdparty/applications/getcal/editserver.ui
+++ b/src/3rdparty/applications/getcal/editserver.ui
@@ -7,17 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>335</width>
-    <height>344</height>
+    <height>343</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
   </property>
   <widget class="QTabWidget" name="serverTab">
    <property name="geometry">
@@ -28,32 +25,20 @@
      <height>341</height>
     </rect>
    </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
    <property name="currentIndex">
     <number>0</number>
    </property>
    <widget class="QWidget" name="Server">
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
     <attribute name="title">
      <string>Server</string>
     </attribute>
     <widget class="QWidget" name="formLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>9</x>
-       <y>9</y>
-       <width>311</width>
-       <height>291</height>
+       <x>-1</x>
+       <y>-1</y>
+       <width>321</width>
+       <height>311</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout">
@@ -68,7 +53,7 @@
        <widget class="QLineEdit" name="serverNameLine">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
+          <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
@@ -91,7 +76,7 @@
        <widget class="QLineEdit" name="serverAddressLine">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
+          <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
@@ -111,7 +96,14 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="userNameLine"/>
+       <widget class="QLineEdit" name="userNameLine">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="passwordLabel">
@@ -127,7 +119,14 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QLineEdit" name="userPassLine"/>
+       <widget class="QLineEdit" name="userPassLine">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -136,38 +135,15 @@
     <attribute name="title">
      <string>Calendars</string>
     </attribute>
-    <widget class="QScrollArea" name="scrollArea">
+    <widget class="QListWidget" name="listWidget">
      <property name="geometry">
       <rect>
-       <x>-1</x>
-       <y>-1</y>
-       <width>331</width>
+       <x>0</x>
+       <y>0</y>
+       <width>321</width>
        <height>311</height>
       </rect>
      </property>
-     <property name="widgetResizable">
-      <bool>true</bool>
-     </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>329</width>
-        <height>309</height>
-       </rect>
-      </property>
-      <widget class="QListView" name="listView">
-       <property name="geometry">
-        <rect>
-         <x>-5</x>
-         <y>1</y>
-         <width>331</width>
-         <height>311</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
     </widget>
    </widget>
   </widget>
