Rename calsettings into serversettings to be more clear.

--- a/src/3rdparty/applications/getcal/serversettings.ui
+++ b/src/3rdparty/applications/getcal/serversettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CalSettings</class>
- <widget class="QWidget" name="CalSettings">
+ <class>ServerSettings</class>
+ <widget class="QWidget" name="ServerSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
