--- a/src/3rdparty/applications/getcal/serversettings.ui
+++ b/src/3rdparty/applications/getcal/serversettings.ui
@@ -32,7 +32,7 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item>
-      <widget class="QListWidget" name="serverList">
+      <widget class="QListWidget" name="uiServerList">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>1</horstretch>
@@ -42,7 +42,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="saveConfigButton">
+      <widget class="QPushButton" name="uiSaveConfigButton">
        <property name="text">
         <string>Save</string>
        </property>
